# coding-agent-loop

./: Cargo.toml  README.md
src/: config.rs  error.rs  events.rs  lib.rs  loop_detection.rs  prompt.rs  session.rs  subagent.rs  testing.rs  truncation.rs  turns.rs
src/environment/: local.rs  mod.rs
src/profile/: anthropic.rs  gemini.rs  mod.rs  openai.rs
src/tools/: apply_patch.rs  core.rs  mod.rs
tests/: live_session.rs
